--- a/requirements.txt
+++ b/requirements.txt
@@ -1,177 +1,101 @@
-absl-py==0.8.1
-appdirs==1.4.3
-asciitree==0.3.3
-asn1crypto==1.3.0
-astor==0.8.0
-attrs==19.3.0
-backcall==0.1.0
-bleach==3.1.4
-bokeh==1.4.0
-boto3==1.11.11
-botocore==1.14.11
-cachetools==4.0.0
-certifi==2019.11.28
-cffi==1.13.2
-cftime==1.0.4.2
+appnope==0.1.0
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==20.2.0
+backcall==0.2.0
+bleach==3.2.1
+certifi==2020.6.20
+cffi==1.14.3
 chardet==3.0.4
-Click==7.0
-click-plugins==1.1.1
-cligj==0.5.0
-cloudpickle==1.2.2
-cryptography==2.8
+cloudpickle==1.6.0
+confuse==1.3.0
 cycler==0.10.0
-cytoolz==0.10.1
-dask==2.10.1
-decorator==4.4.1
+decorator==4.4.2
 defusedxml==0.6.0
-distributed==2.10.0
-docutils==0.15.2
-eli5==0.10.1
 entrypoints==0.3
-fasteners==0.15
-Fiona==1.8.11
-fsspec==0.6.2
 future==0.18.2
-gast==0.2.2
-gcsfs==0.6.0
-GDAL==3.0.2
-geopandas==0.6.1
-google-auth==1.11.0
-google-auth-oauthlib==0.4.1
-google-pasta==0.1.8
-graphviz==0.13.2
-grpcio==1.16.1
-h5py==2.10.0
-HeapDict==1.0.1
-holoviews==1.12.7
-hyperopt==0.2.3
-idna==2.8
-imageio==2.8.0
-importlib-metadata==1.5.0
-inflect==4.1.0
-intake==0.5.4
-intake-cesm==2019.2.0
-intake-cmip==2019.1.1
-intake-esm==2019.12.13
-intake-xarray==0.3.1
-ipykernel==5.1.4
-ipython==7.12.0
+htmlmin==0.1.12
+hyperopt==0.2.4
+idna==2.10
+ImageHash==4.1.0
+imageio==2.9.0
+ipykernel==5.3.4
+ipython==7.18.1
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
-jaraco.itertools==5.0.0
-jedi==0.16.0
-Jinja2==2.11.1
-jmespath==0.9.4
-joblib==0.14.1
+jedi==0.17.2
+Jinja2==2.11.2
+joblib==0.16.0
+json5==0.9.5
 jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==5.3.4
-jupyter-console==6.1.0
-jupyter-core==4.6.1
-Keras==2.2.4
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-kiwisolver==1.1.0
-lime==0.1.1.37
-locket==0.2.0
-Markdown==3.1.1
+jupyter-client==6.1.7
+jupyter-console==6.2.0
+jupyter-core==4.6.3
+jupyterlab==2.2.8
+jupyterlab-pygments==0.1.1
+jupyterlab-server==1.2.0
+kiwisolver==1.2.0
+lime==0.2.0.1
+llvmlite==0.34.0
 MarkupSafe==1.1.1
-matplotlib==3.1.3
+matplotlib==3.3.2
+missingno==0.4.2
 mistune==0.8.4
-mkl-fft==1.0.15
-mkl-random==1.1.0
-mkl-service==2.3.0
-monotonic==1.5
-more-itertools==8.2.0
-msgpack==0.6.1
-msgpack-numpy==0.4.4.3
-munch==2.5.0
-nb-conda-kernels==2.2.2
-nbconvert==5.6.1
-nbformat==5.0.4
-netCDF4==1.5.3
-networkx==2.2
-notebook==6.0.3
-numcodecs==0.6.4
-numpy==1.18.1
-oauthlib==3.1.0
-olefile==0.46
-opt-einsum==3.1.0
-packaging==20.1
-pandas==1.0.0
+nbclient==0.5.0
+nbconvert==6.0.6
+nbformat==5.0.7
+nest-asyncio==1.4.0
+networkx==2.5
+notebook==6.1.4
+numba==0.51.2
+numpy==1.19.2
+packaging==20.4
+pandas==1.1.2
+pandas-profiling==2.9.0
 pandocfilters==1.4.2
-param==1.9.3
-parso==0.6.0
-partd==1.1.0
+parso==0.7.1
 patsy==0.5.1
 pexpect==4.8.0
+phik==0.10.0
 pickleshare==0.7.5
-Pillow==7.0.0
-plotly==4.5.0
-progressbar==2.5
-prometheus-client==0.7.1
-prompt-toolkit==3.0.3
-protobuf==3.11.2
-psutil==5.6.7
+Pillow==7.2.0
+plotly==4.10.0
+prometheus-client==0.8.0
+prompt-toolkit==3.0.7
 ptyprocess==0.6.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.19
-Pygments==2.5.2
-pyOpenSSL==19.1.0
-pyparsing==2.4.6
-pyproj==2.4.1
-pyrsistent==0.15.7
-PySocks==1.7.1
+pycparser==2.20
+Pygments==2.7.1
+pyparsing==2.4.7
+pyrsistent==0.17.3
 python-dateutil==2.8.1
-python-snappy==0.5.4
-pytz==2019.3
-pyviz-comms==0.7.3
+pytz==2020.1
 PyWavelets==1.1.1
-PyYAML==5.3
-pyzmq==18.1.1
-qtconsole==4.6.0
-requests==2.22.0
-requests-oauthlib==1.3.0
+PyYAML==5.3.1
+pyzmq==19.0.2
+qtconsole==4.7.7
+QtPy==1.9.0
+requests==2.24.0
 retrying==1.3.3
-rsa==4.0
-Rtree==0.9.3
-ruamel-yaml==0.15.87
-s3fs==0.4.0
-s3transfer==0.3.2
-scikit-image==0.16.2
-scikit-learn==0.22.2
-scipy==1.4.1
-seaborn==0.10.0
+scikit-image==0.17.2
+scikit-learn==0.23.2
+scipy==1.5.2
+seaborn==0.11.0
 Send2Trash==1.5.0
-shap==0.35.0
-Shapely==1.6.4.post2
-six==1.14.0
+six==1.15.0
 sklearn==0.0
-sortedcontainers==2.1.0
-statsmodels==0.11.0
-tabulate==0.8.6
-tblib==1.6.0
-tensorboard==1.15.0
-tensorflow==1.15.2
-tensorflow-estimator==1.15.1
-termcolor==1.1.0
-terminado==0.8.3
+statsmodels==0.12.0
+tangled-up-in-unicode==0.0.6
+terminado==0.9.1
 testpath==0.4.4
-toolz==0.10.0
-torch==1.3.1
-torchvision==0.4.2
-tornado==6.0.3
-tqdm==4.43.0
-traitlets==4.3.3
-urllib3==1.25.8
-wcwidth==0.1.8
+threadpoolctl==2.1.0
+tifffile==2020.9.22
+tornado==6.0.4
+tqdm==4.50.0
+traitlets==5.0.4
+urllib3==1.25.10
+visions==0.5.0
+wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug==0.16.1
 widgetsnbextension==3.5.1
-wrapt==1.11.2
-xarray==0.14.1
-xgboost==1.0.1
-zarr==2.4.0
-zict==1.0.0
-zipp==2.1.0
+xgboost==1.2.0
